FIX: Get rid of no flex wrap on nav bar so that it moves smoothly from small to larger screens as beforer the nav buttons are overflowing hte screen

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -800,13 +800,6 @@ nav-btn:hover,
 
 /* Responsive Media Queries */
 
-@media (min-width: 419px) {
-  .nav-buttons {
-    flex-wrap: nowrap;
-    justify-content: center;
-  }
-}
-
 @media (max-width: 480px) {
   .book-info-box p {
     line-height: 1.6;
